# retrochat

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  TAURI_SETUP.md  clippy.toml  mise.toml  rustfmt.toml
.cargo/: config.toml
.context/: cli-redesign-plan.md
.sqlx/: query-0be4969126dce80121da5d413019cbc360356f1b8bc4e427ea237c27c0200156.json  query-0d377849772662bb865abce4c40ba6fb3f50528bafe1653117c51a5ff27b7e9e.json  query-0eff137ea88269d3b5b4cd1e973f8e5a2ee3d996101fa6541f3fc9ddbe874ea8.json  query-11e1237b9247c88dd62f57ddc3954d17054c819302558e61a08e2adb75523c36.json  query-12efa552086d513d3950ba0ed43c41bfc938b996e09a6474b06aabe8e5d14cbb.json  query-1302f7c038525bce6da5d8aa8dc38debb5c4887ec8aeaa5fd44c04bec4d9dfe6.json  query-16d83cb7e55768d51a99ae240dac3d305c7696877b7d1126269dadc2166ff712.json  query-17371301b37431d07bc19575cc78ebe7ce777507f61182589eada5e7c181c147.json  query-1a6b1c1b588760ed6e0d80e71dffb98e5ca9196039b20a485ca85c62e21dee44.json  query-1d7bec6b347291336d181c03d667ec5a05955ba7e30a8fbcfc6a5dc0daed4b17.json  query-1f8ef75ee4ce329f878ad852323147d541ee8f69506fbc36386ea34a5c9f6da8.json  query-3dfcc101e79b337d76f05d163d82d7ad4808f8e33237e4e65f393c0f3d9cdf40.json  query-3f90104d15a0c90cac0a856bd3add00a94034c9bd416ff0eb4bd8a7ac19e75c7.json  query-4e6eb0154e982c451f06fbcb471bc2a3f11e7ea3d6a5e036cab74d80bce4a717.json  query-4f1914b51efde358a78dc34ce062aeb2459ec17c17e28847075136f8c3654822.json  query-50a0989a8090a26332facee30e3fe27bf7740262e14e84ad9fb28352f4e3af11.json  query-5185b938965ed7142d126c4f73c4e313913a894b181530a845c338762bf56e34.json  query-52ec7d328d2f43ace95296caa380aeac9b75704263ada069cb87c6faa6cb4a7d.json  query-56ef8e0d3dc92983df605fc3a53b9f05c13677a1209ddf7a4e4990c15b0a4edd.json  query-5f19050fdc6b9336cefee6f547157e7696ea46ad07714f3a4890cb8b9bf09f8a.json  (+45 more)
crates/retrochat-cli/: Cargo.toml
crates/retrochat-cli/src/: main.rs
crates/retrochat-cli/src/commands/: analytics.rs  config.rs  help.rs  import.rs  init.rs  mod.rs  query.rs  setup.rs  summarize.rs  watch.rs
crates/retrochat-cli/tests/contract/: test_cli_add_command.rs  test_cli_analytics_cancel.rs  test_cli_analytics_execute.rs  test_cli_analytics_show.rs  test_cli_analytics_status.rs  test_error_handling.rs  test_first_time_setup.rs  test_first_time_setup_simple.rs  test_session_detail.rs  test_session_detail_simple.rs  test_setup_wizard.rs  test_single_session_analysis.rs
crates/retrochat-core/: Cargo.toml  build.rs
crates/retrochat-core/.sqlx/: query-76fa1a7b667a1c5a8e5cbb355261cb716bc1f40e8035eec1289702a2287e574a.json  query-a60c6fbf087d65237d635258999d4357ba7381aafb7b0efc8aefd8727ac7e786.json
crates/retrochat-core/migrations/: 002_add_message_tags.sql  003_add_retrospect_requests.sql  004_add_retrospections.sql  006_add_unified_tool_storage.sql  007_remove_analysis_type.sql  009_refactor_tool_storage.sql  010_add_bash_metadata.sql  011_extend_analysis_tables.sql  014_add_ai_quantitative_output.sql  015_remove_unused_analytics_columns.sql  016_add_metric_quantitative_output.sql  017_add_slash_command_message_type.sql  018_add_hierarchical_storage.sql
crates/retrochat-core/src/: env.rs  error.rs  lib.rs
crates/retrochat-core/src/database/: analytics_repo.rs  detected_turn_repo.rs  message_repo.rs  mod.rs  session_summary_repo.rs  turn_summary_repo.rs
crates/retrochat-core/src/embedding/: config.rs  mod.rs  models.rs  service.rs
crates/retrochat-core/src/models/: bash_metadata.rs  detected_turn.rs  message.rs  mod.rs  project.rs  session_summary.rs  turn_summary.rs
crates/retrochat-core/src/models/provider/: enum.rs  parser_type.rs  registry.rs
crates/retrochat-core/src/models/provider/config/: base.rs  gemini_cli.rs
crates/retrochat-core/src/parsers/: claude_code.rs  cursor_client.rs  gemini_cli.rs  mod.rs
crates/retrochat-core/src/services/: analytics_request_service.rs  analytics_service.rs  mod.rs  parser_service.rs  query_service.rs  session_summarization.rs  turn_detection.rs  turn_summarization.rs  watch_service.rs
crates/retrochat-core/src/services/analytics/: ai_analysis.rs  data_collector.rs  metrics.rs  mod.rs  models.rs
crates/retrochat-core/src/services/google_ai/: client.rs  errors.rs  retry.rs
crates/retrochat-core/src/services/llm/: claude_code.rs  errors.rs  factory.rs  gemini_cli.rs  google_ai.rs  mod.rs  subprocess.rs  traits.rs  types.rs
crates/retrochat-core/src/services/llm/adapters/: claude_code.rs  gemini_cli.rs  google_ai.rs  mod.rs
crates/retrochat-core/src/tools/: mod.rs
crates/retrochat-core/src/tools/parsers/: bash.rs  edit.rs  mod.rs  read.rs  write.rs
crates/retrochat-core/src/utils/: time_parser.rs
crates/retrochat-core/src/vector_store/: mod.rs  models.rs  schemas.rs  store.rs
crates/retrochat-core/tests/integration/: test_google_ai_api.rs  test_import_batch.rs  test_import_file.rs  test_search.rs  test_session_detail.rs  test_sessions_query.rs
crates/retrochat-core/tests/unit/: test_auto_detect.rs  test_claude_code_parser.rs  test_codex_parser.rs  test_gemini_cli_parser.rs  test_message_pairing.rs
crates/retrochat-gui/: Cargo.toml
crates/retrochat-gui/.cargo/: config-optimized.toml
crates/retrochat-gui/icons/: ICONS_README.md
crates/retrochat-gui/src/: dto.rs  lib.rs
crates/retrochat-gui/src/commands/: analytics.rs  file.rs  histogram.rs  mod.rs  session.rs
crates/retrochat-mcp/: Cargo.toml
crates/retrochat-mcp/src/: error.rs  lib.rs  main.rs  server.rs
crates/retrochat-tui/: Cargo.toml
crates/retrochat-tui/src/: app.rs  lib.rs  mod.rs  session_detail.rs  session_list.rs  tool_display.rs
crates/retrochat-tui/src/components/: dialog.rs
crates/retrochat-tui/src/events/: handler.rs  mod.rs
crates/retrochat-tui/src/state/: mod.rs  session_detail_state.rs  session_list_state.rs
crates/retrochat-tui/src/utils/: layout.rs  mod.rs  text.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: BUNDLE_SIZE.md
src-tauri/icons/: icon.icns
src-tauri/src/: dto.rs  lib.rs  main.rs
src-tauri/src/commands/: analytics.rs  file.rs  histogram.rs  mod.rs  session.rs
ui/: app.js  (+2 more)
(+314 files in other folders)
