[workspace]
members = [
    "crates/retrochat-core",
    "crates/retrochat-tui",
    "crates/retrochat-cli",
    "crates/retrochat-gui",
    "crates/retrochat-mcp",
]
resolver = "2"

[workspace.dependencies]
# Shared dependencies (versions managed centrally)
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde", "std", "clock"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono", "uuid"] }

# CLI
clap = { version = "4.4", features = ["derive"] }
inquire = "0.7"
console = "0.15"
indicatif = "0.17"

# TUI
ratatui = "0.24"
crossterm = "0.27"
syntect = "5.2"
terminal_size = "0.3"

# HTTP
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
backoff = "0.4"

# Utilities
dirs = "5.0"
notify = "8.1.0"
similar = "2.7"
num_cpus = "1.16"
regex = "1.10"
lazy_static = "1.4"
hex = "0.4"
toml = "0.8"

# Serialization
prost = "0.12"
bytes = "1.5"
flate2 = "1.0"

# Async
futures = "0.3"
async-trait = "0.1"
tokio-util = "0.7"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
log = "0.4.28"

# System
atty = "0.2"
rusqlite = { version = "0.30", features = ["bundled", "backup"] }

# MCP
rmcp = { version = "0.11", features = ["server", "macros", "transport-io"] }
schemars = { version = "1.0", features = ["chrono04", "uuid1"] }

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["retrochat"]
license = "MIT"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
split-debuginfo = "unpacked"
