[package]
name = "retrochat-tauri"
version = "0.1.0"
edition = "2021"
authors = ["retrochat"]
description = "Retrochat Desktop Application"
license = "MIT"

[lib]
name = "retrochat_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "RetroChat"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri dependencies
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Workspace dependencies - reuse from parent
retrochat = { path = ".." }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-fs = "2"
