[package]
name = "retrochat-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for RetroChat - LLM chat history analysis"

[lib]
name = "retrochat_core"
path = "src/lib.rs"

[dependencies]
# Use workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true, optional = true }
backoff = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }
hex = { workspace = true }
prost = { workspace = true }
bytes = { workspace = true }
flate2 = { workspace = true }
atty = { workspace = true }
rusqlite = { workspace = true }
toml = { workspace = true }
num_cpus = { workspace = true }
clap = { workspace = true }
notify = { workspace = true }
similar = { workspace = true }
crossterm = { workspace = true }

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest"]

[dev-dependencies]
tempfile = "3.8"
mockall = "0.12"
