[package]
name = "retrochat-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MCP server for RetroChat - exposes chat session query and analytics via Model Context Protocol"

[[bin]]
name = "retrochat-mcp"
path = "src/main.rs"

[dependencies]
retrochat-core = { path = "../retrochat-core" }

# MCP
rmcp = { workspace = true }
schemars = { workspace = true }

# Async & Core
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.8"
